--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'org.springframework.boot' version '2.7.2'
     id 'io.spring.dependency-management' version '1.0.12.RELEASE'
     id 'java'
+    id 'org.sonarqube' version '3.3'
+    id 'jacoco'
 }
 
 group = 'com.example'
@@ -25,8 +27,40 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    //sonarqube
+    implementation 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:3.3'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy 'jacocoTestReport'
+}
+
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.enabled false
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.host.url", "http://13.209.22.17:8081"
+        property "sonar.projectKey", "jpa-self-study"
+        property "sonar.projectName", "main"
+        property "sonar.sources", "src" // 소스 경로
+        property "sonar.language", "java" // 언어
+        property "sonar.sourceEncoding", "UTF-8"
+        property "sonar.profile", "Sonar way" // SonarQube 에서 분석할 때 적용할 프로필(분석할 수준 설정)
+        property "sonar.java.binaries", "${buildDir}/classes" // 자바 클래스 파일위치
+        property "sonar.test.inclusions", "**/*Test.java" // 코드 분석에 사용할 테스트 소스
+        property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
+        // jacoco 플러그인의 결과 파일
+    }
 }
