--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,24 @@
 spring:
   datasource:
     driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:jpa-self-study;MODE=MYSQL;
+    url: jdbc:h2:mem:jpa-self-study
     username: sa
     password:
+  #    driver-class-name: org.testcontainers.jdbc.ContainerDatabaseDriver
+  #    url: jdbc:tc:mysql:8:///localhost
+  #    username: test_user
+  #    password: 1234
   h2:
     console:
       enabled: true
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       properties:
         hibernate:
-          show_sql: true
-          format_sql: true
+          show_sql: false
+          format_sql: false
     open-in-view: false
-
-
-logging:
-  level:
-    org:
-      hibernate:
-        type:
-          descriptor:
-            sql: trace
-
-
+  output:
+    ansi:
+      enabled: always
