--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -6,7 +6,7 @@ spring:
     password:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     open-in-view: false
   output:
     ansi:
